test/fail/integration/_fail_sem_expr_funct_call_4.hs
x :: Int
x = 3
y :: Int
y = x 3
main = print "hello"